@@ -1,3 +1,7 @@
+2014-02-09  vaiorabbit  <https://twitter.com/vaiorabbit>
+
+	* sample/GLExcess/glxs_glut.rb : Added.
+
 2014-02-08  vaiorabbit  <https://twitter.com/vaiorabbit>
 
 	* README.md: Added links to freeglut.
